# learn-cpp20

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-init-all-build-presets.sh  manifest
TryingStuff/: TryingStuff.vcxproj
cmake/: assure-cxx-compiler-is-msvc-cl.cmake  detect_compiler.cmake  find-msvc-cl.cmake  init-all-build-presets.cmake  is-msvc-cl-known.cmake  verify-cxx-compiler.cmake
cmake/init-all-build-presets/: init_all_build_presets.cmake
cmake/verify-cxx-compiler/: verify-cxx-compiler.cmake  verify_cxx_compiler.cmake
cmake/verify-cxx-compiler/compiler/msvc/: assure-cxx-compiler-is-msvc-cl.cmake  assure-cxx-compiler-is-msvc.cmake  assure_cxx_compiler_is_msvc.cmake  assure_cxx_env_is_msvc.cmake  check_is_msvc_known.cmake  find_msvc.cmake  is-msvc-known.cmake
doc/: CMakeLists.txt
learn-cpp20/: .gitignore  buildfile  learn-cpp20.sln  manifest  repositories.manifest  testscript
learn-cpp20/learn-cpp20/: .gitignore  learn-cpp20.cpp
learn-cpp20/trying-stuff/: Main.ixx  trying-stuff.vcxproj  trying-stuff.vcxproj.filters
src/: CMakeLists.txt  Main.cpp  compiler_options.cmake  extra_compiler_options.cmake
